app/assets/stylesheets/api/shops.scss
// Place all the styles related to the Api/Shops controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
h1 {
  display: block;
}

.welcome {
  width: 950px;
  height: 45px;
  margin: 0 auto;
  padding-top: 20px;
  position: relative;
  background: #F5F5F1;
}

.welcome .text {
  display: block;
  float: left;
  position: relative;
  font-family: Merriweather, serif;
  font-size: 24px;
  font-weight: 500;
  line-height: 30px;
}

.welcome a {
  float: right;
  border: 0 none;
  border-radius: 1px;
  color: white;
  background: #43BFBF;
}

#shops {
  width: 1100px;
  margin-left: 145px;
  margin-right: 145px;
  position: relative;
  overflow: hidden
}

.shop-card {
  display: block;
  height: 300px;
  width: 300px;
  border: 1px solid #CCC;
  border-radius: 3px;
  position: relative;
  float: left;
  margin: 30px;
  background: #FFF;
  -webkit-transition: all 1s ease-in-out;
  -moz-transition: all 1s ease-in-out;
  -o-transition: all 1s ease-in-out;
  -ms-transition: all 1s ease-in-out;
  transition: all 1s ease-in-out;
}

.item-pics {
  display: block;
  height: 244px;
  width: 298px;
  border-bottom: 1px solid #CCC;
  position: relative;
  margin: 0 auto;
  overflow: hidden;
}

.item-img {
  display: block;
  height: 50%;
  width: 50%;;
  border: 0 none;
  position: relative;
  float: left;
}

.item-img:hover {
  opacity: 0.6;
}

.shop-info {
  display: block;
  height: 53px;
  width: 298px;
  border: 0 none;
  position: relative;
  overflow: hidden;
}

.shop-info img {
  height: 36px;
  width: 36px;
  border: 0 none;
  border-radius: 3px;
  position: relative;
  float: left;
  top: 12.5%;
  margin-left: 10px;
}

.shop-info .shopnamelink {
  display: block;
  height: 100%;
  width: 202px;
  font-size: 14px;
  position: relative;
  float: left;
  padding: 7px;
  overflow: hidden;
}

.shopnamelink > .shopname {
  color: #333;
}

.shop-info .shopfavorite {
  height: 36px;
  width: 36px;
  position: relative;
  margin-right: 10px;
  border: 0 none;
  border-radius: 3px;
  float: right;
  top: 12.5%;
  margin-right: 10px;
}

#items {
  display: block;
  margin: 0 auto;
  width: 76%;
  position: relative;
  overflow: hidden;
}

.itemthumb {
  margin: 10px 15px 20px 15px;
  position: relative;
  height: 180px;
  width: 170px;
  padding: 6px;
  border: 1px solid #CCC;
  float: left;
  overflow: hidden;
  background: #FFF;
  -webkit-transition: all 5s ease-in-out;
  -moz-transition: all 5s ease-in-out;
  -o-transition: all 5s ease-in-out;
  -ms-transition: all 5s ease-in-out;
  transition: all 5s ease-in-out;
}

.itemthumb .itempic {
  width: 100%;
  height: 135px;
  overflow: hidden;
}

.itempic img {
  width: 100%;
  height: 100%;
}

.itempic button {
  float: right;
  display: none;
  transform: translateY(-395%) translateX(-5%);
}

.itempic:hover button {
  display: block;
}

.itemthumb .iteminfo {
  display: block;
  height: 40px;
  width: 100%;
}

.iteminfo .itemlink {
  display: block;
  height: 20px;
  width: 100%;
  overflow: hidden;
  padding-top: 2px;
  font-size: 12px;
  color: #555;
}

.iteminfo .shopinfoprice {
  display: block;
  height: 20px;
  width: 100%;
}

.shopinfoprice a {
  float: left;
  font-family: Roboto;
  font-size: 12px;
  width: 80%;
  color: #6A6A6A;
}

.shopinfoprice .itemprice {
  float: right;
  color: #19BF19;
  font-size: 11px;
  width: 25%;
}

